fix spacing on homepage

--- a/css/main.css
+++ b/css/main.css
@@ -99,10 +99,6 @@
 	padding: 10px 20px;
 }
 
-.gdi-mission {
-    margin-top: 20px;
-}
-
 .gdi-icon {
     height: 30px;
     margin-right: 10px;
@@ -238,7 +234,7 @@
 	font-weight: 300;
 	text-align: center;
 	font-size: 25px;
-	margin-top: 30px;
+	margin-top: 25px;
 }
 
 .footer {
